--- a/Resume.html
+++ b/Resume.html
@@ -76,6 +76,7 @@
                   <div class="skillname">
                       <p><a href="https://en.wikipedia.org/wiki/JavaScript">></a> JavaScript</p>
                       <p><a href="https://en.wikipedia.org/wiki/CSS">></a> CSS</p>
+                      <p><a href="https://fr.wikipedia.org/wiki/Bootstrap_(framework)">></a> Bootstrap</p>
                       <p><a href="https://en.wikipedia.org/wiki/HTML">></a> HTML</p>
                       <p><a href="https://en.wikipedia.org/wiki/Penetration_test">></a> Pen. Testing</p>
                       <p><a href="https://en.wikipedia.org/wiki/Information_security">></a> Inf. Sec Expert</p>
@@ -83,8 +84,9 @@
                       <p><a href="https://en.wikipedia.org/wiki/Graphic_design">></a> Graphic Design</p>
                   </div>
                   <div class="skillknowledge">
-                      <p>⭐️⭐️⭐️</p>
                       <p>⭐️⭐️⭐️⭐️</p>
+                      <p>⭐️⭐️⭐️⭐️</p>
+                      <p>⭐️⭐️⭐️⭐️⭐️⭐️</p>
                       <p>⭐️⭐️⭐️⭐️⭐️</p>
                       <p>⭐️⭐️⭐️⭐️⭐️⭐️</p>
                       <p>⭐️⭐️⭐️⭐️</p>
